--- a/WebProject.html
+++ b/WebProject.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-		<title>Lab 2</title>
+		<title>Web Project</title>
 	</head>
 	<body>
 		<h1>Social Media Links</h1>
@@ -36,5 +36,6 @@
 				<br>
 			</figure>
 		<hr>
+		<a href="https://www.w3schools.com/html/">Help Me</a>
 	</body>
 </html>
