--- a/WebProject.html
+++ b/WebProject.html
@@ -36,6 +36,7 @@
 				<br>
 			</figure>
 		<hr>
-		<a href="https://www.w3schools.com/html/">Help Me</a>
+		<a href="https://www.w3schools.com/html/">Help</a>
+		<a href="https://www.w3schools.com/html/"> Me</a>
 	</body>
 </html>
