--- a/WebProject.html
+++ b/WebProject.html
@@ -4,7 +4,7 @@
 		<title>Web Project</title>
 	</head>
 	<body>
-		<h1>Social Media Links</h1>
+		<h1>Document Files</h1>
 		<hr>
 			<figure>
 				<a href="https://youtube.com/">
