--- a/WebProject.html
+++ b/WebProject.html
@@ -37,6 +37,6 @@
 			</figure>
 		<hr>
 		<a href="https://www.w3schools.com/html/">Help</a>
-		<a href="https://www.w3schools.com/html/"> Me</a>
+		<a href="https://protovision.github.io/322-fall-18/index.html"> Me</a>
 	</body>
 </html>
