--- a/WebProject.html
+++ b/WebProject.html
@@ -6,6 +6,7 @@
 	<body>
 		<h1>CSE Project</h1>
 		<hr>
+		<audio controls src="Team_Fortress_2_Soundtrack_Dapper_Cadaver.mp3"><p>Audio doesn't work</p></audio>
 			<figure>
 				<a href="https://youtube.com/">
 				<img 	src="Youtube.png" 
