--- a/WebProject.html
+++ b/WebProject.html
@@ -4,9 +4,9 @@
 		<title>Web Project</title>
 	</head>
 	<body>
-		<h1>CSE Project</h1>
+		<h1>Tyr-Stein Board Game : Rule Book</h1>
 		<hr>
-		<audio controls src="Team_Fortress_2_Soundtrack_Dapper_Cadaver.mp3"><p>Audio doesn't work</p></audio>
+		<audio controls src="Flamerock Refuge.mp3"><p>Audio doesn't work</p></audio>
 			<figure>
 				<a href="https://youtube.com/">
 				<img 	src="Youtube.png" 
