--- a/WebProject.html
+++ b/WebProject.html
@@ -4,7 +4,7 @@
 		<title>Web Project</title>
 	</head>
 	<body>
-		<h1>Tyr-Stein Board Game : Rule Book</h1>
+		<h1>ᛏᛃᚱ᛫ᛊᛏᛖᛁᚾ᛫ᛒᛟᚨᚱᛞ᛫ᚷᚨᛗᛖ᛫:᛫ᚱᚢᛚᛖᛒᛟᛟᚲ | Tyr-Stein Board Game : Rule Book</h1>
 		<hr>
 		<audio controls src="Flamerock Refuge.mp3"><p>Audio doesn't work</p></audio>
 			<figure>
