--- a/WebProject.html
+++ b/WebProject.html
@@ -4,9 +4,8 @@
 		<title>Web Project</title>
 	</head>
 	<body>
-		<h1>ᛏᛃᚱ᛫ᛊᛏᛖᛁᚾ᛫ᛒᛟᚨᚱᛞ᛫ᚷᚨᛗᛖ᛫:᛫ᚱᚢᛚᛖᛒᛟᛟᚲ | Tyr-Stein Board Game : Rule Book</h1>
+		<h1>ᛏᛃᚱ᛫ᛊᛏᛖᛁᚾ᛫ᛒᛟᚨᚱᛞ᛫ᚷᚨᛗᛖ᛫:᛫ᚱᚢᛚᛖᛒᛟᛟᚲ | Tyr-Stein Board Game : Rule Book	<audio controls src="Flamerock Refuge.mp3"><p>Audio doesn't work</p></audio></h1>
 		<hr>
-		<audio controls src="Flamerock Refuge.mp3"><p>Audio doesn't work</p></audio>
 			<figure>
 				<a href="https://youtube.com/">
 				<img 	src="Youtube.png" 
