--- a/WebProject.html
+++ b/WebProject.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 		<title>Web Project</title>
+		<link rel="stylesheet" href="ProjectStyle.css">
 	</head>
 	<body>
 		<h1>ᛏᛃᚱ᛫ᛊᛏᛖᛁᚾ᛫ᛒᛟᚨᚱᛞ᛫ᚷᚨᛗᛖ᛫:᛫ᚱᚢᛚᛖᛒᛟᛟᚲ | Tyr-Stein Board Game : Rule Book</h1>
@@ -9,7 +10,7 @@
 		<audio controls src="Flamerock Refuge.mp3"><p>Audio doesn't work</p></audio>
 			<figure>
 				<a href="https://youtube.com/">
-				<img 	src="Youtube.png" 
+					<img 	src="Youtube.png" 
 					alt="Image cannot Load"
 					width="400"
 					height="400">
