--- a/WebProject.html
+++ b/WebProject.html
@@ -35,6 +35,9 @@
 					width="512"
 					height="512">
 				</a>
+				
+				<p>The making of this game is originally inspired from the rules of <i>Yu-Gi-Oh! The Duelists of the Roses</i>, yet it also attributes to some elements from Chess and Dungeons and Dragons.</p>
+				<p>The game has two types of gamemodes: War Zone (WZ) and Battlefield (BF); <b>WZ</b> is the expanded version that accounts to many different variables to win the game while <b>BF</b> is a smaller, fast-pace, and simplistic gamemode.</p>
 				<br>
 			</figure>
 		<hr>
