--- a/WebProject.html
+++ b/WebProject.html
@@ -38,6 +38,14 @@
 				
 				<p>The making of this game is originally inspired from the rules of <i>Yu-Gi-Oh! The Duelists of the Roses</i>, yet it also attributes to some elements from Chess and Dungeons and Dragons.</p>
 				<p>The game has two types of gamemodes: War Zone (WZ) and Battlefield (BF); <b>WZ</b> is the expanded version that accounts to many different variables to win the game while <b>BF</b> is a smaller, fast-pace, and simplistic gamemode.</p>
+				<dl>
+					<dt><b><u>Board Setup :</b></u></dt>
+						<dd>Grid : 15x15 (WZ) ; 7x7 (BF)</dd>
+						<dd>Life Points : 10K (WZ) ; 5K (BF)</dd>
+						<dd>Summoning Level : 1-9</dd>
+						<dd>Cards Required : 50</dd>
+						<dd>Card Limit: Only 5 Soldier and 5 Magic/Trap Cards can be on your side of the field</dd>
+				</dl>
 				<br>
 			</figure>
 		<hr>
