--- a/WebProject.html
+++ b/WebProject.html
@@ -8,6 +8,8 @@
 		<h1>ᛏᛃᚱ᛫ᛊᛏᛖᛁᚾ᛫ᛒᛟᚨᚱᛞ᛫ᚷᚨᛗᛖ᛫:᛫ᚱᚢᛚᛖᛒᛟᛟᚲ | Tyr-Stein Board Game : Rule Book</h1>
 		<hr>
 		<audio controls src="Flamerock Refuge.mp3"><p>Audio doesn't work</p></audio>
+		<audio controls src="Mines of Avarice.mp3"><p>Audio doesn't work</p></audio>
+
 			<figure>
 				<a href="https://youtube.com/">
 					<img 	src="Youtube.png" 
