--- a/WebProject.html
+++ b/WebProject.html
@@ -10,7 +10,7 @@
 		<audio controls src="Flamerock Refuge.mp3"><p>Audio doesn't work</p></audio>
 		<audio controls src="Mines of Avarice.mp3"><p>Audio doesn't work</p></audio>
 
-			<figure>
+			<!--<figure>
 				<a href="https://youtube.com/">
 					<img 	src="Youtube.png" 
 					alt="Image cannot Load"
@@ -37,7 +37,8 @@
 					width="512"
 					height="512">
 				</a>
-				
+				-->
+
 				<p>The making of this game is originally inspired from the rules of <i>Yu-Gi-Oh! The Duelists of the Roses</i>, yet it also attributes to some elements from Chess and Dungeons and Dragons.</p>
 				<p>The game has two types of gamemodes: War Zone (WZ) and Battlefield (BF); <b>WZ</b> is the expanded version that accounts to many different variables to win the game while <b>BF</b> is a smaller, fast-pace, and simplistic gamemode.</p>
 				<dl>
@@ -48,6 +49,9 @@
 						<dd>Cards Required : 50</dd>
 						<dd>Card Limit: Only 5 Soldier and 5 Magic/Trap Cards can be on your side of the field</dd>
 				</dl>
+
+				<table>
+					<tr><th>Warrior-Types</th></tr>
 				<br>
 			</figure>
 		<hr>
