--- a/WebProject.html
+++ b/WebProject.html
@@ -52,6 +52,13 @@
 
 				<table>
 					<tr><th>Warrior-Types</th></tr>
+					<tr><td>Goblins</td><td>Orcs</td></tr>
+					<tr><td>Dwarves</td><td>Machines</td></tr>
+					<tr><td>Elves</td><td>Fairies</td></tr>
+					<tr><td>Dark Elves</td><td>Pixies</td></tr>
+					<tr><td>Humans</td><td>Guardians</td></tr>
+					<tr><td>Druids</td><td>Nature</td></tr>
+				</table>
 				<br>
 			</figure>
 		<hr>
