--- a/WebProject.html
+++ b/WebProject.html
@@ -51,7 +51,7 @@
 				</dl>
 
 				<table>
-					<tr><th>Warrior-Types</th></tr>
+					<tr><th>Warrior-Types:</th></tr>
 					<tr><td>Goblins</td><td>Orcs</td></tr>
 					<tr><td>Dwarves</td><td>Machines</td></tr>
 					<tr><td>Elves</td><td>Fairies</td></tr>
