--- a/WebProject.html
+++ b/WebProject.html
@@ -43,8 +43,8 @@
 				<p>The game has two types of gamemodes: <b>War Zone (WZ)</b> and <b>Battlefield (BF)</b>; <b>WZ</b> is the expanded version that accounts to many different variables to win the game while <b>BF</b> is a smaller, fast-pace, and simplistic gamemode.</p>
 				<dl>
 					<dt><b>Board Setup :</b></dt>
-						<dd>Grid : 15x15 (WZ) ; 7x7 (BF)</dd>
-						<dd>Life Points : 10K (WZ) ; 5K (BF)</dd>
+						<dd>Grid : 15x15 <b>(WZ)</b> ; 7x7 <b>(BF)</b></dd>
+						<dd>Life Points : 10K <b>(WZ)</b> ; 5K <b>(BF)</b></dd>
 						<dd>Summoning Level : 1-9</dd>
 						<dd>Cards Required : 50</dd>
 						<dd>Card Limit: Only 5 Soldier and 5 Magic/Trap Cards can be on your side of the field</dd>
