--- a/WebProject.html
+++ b/WebProject.html
@@ -54,7 +54,7 @@
 				</dl>				
 
 				<table>
-					<tr><th>Warrior-Types:</th><th>&emsp</th><th><b>Elemental Attributes :</></th>	</tr>
+					<tr><th>Warrior-Types:</th><th>&emsp;</th><th><b>Elemental Attributes :</></th>	</tr>
 					<tr><td>Goblins</td><td>Orcs</td></tr>
 					<tr><td>Dwarves</td><td>Machines</td></tr>
 					<tr><td>Elves</td><td>Fairies</td></tr>
