--- a/WebProject.html
+++ b/WebProject.html
@@ -63,17 +63,7 @@
 					<tr><td>Druids</td><td>Nature</td></tr>
 				</table>
 				
-				<dl>
-					<dt><b>Elemental Attributes :</b></dt>
-					<dd>Normal</dd>
-					<dd>Water</dd>
-					<dd>Earth</dd>
-					<dd>Grass</dd>
-					<dd>Fire</dd>
-					<dd>Lightning</dd>
-					<dd>Air</dd>
-					<dd>Light</dd>
-					<dd>Dark</dd>
+					<p><b>Elemental Attributes : </b> Normal, Water, Earth, Grass, Fire, Lightning, Air, Light, and Dark</p>
 				<br>
 			</figure>
 		<hr>
