--- a/WebProject.html
+++ b/WebProject.html
@@ -63,8 +63,12 @@
 					<tr><td>Druids</td><td>Nature</td></tr>
 				</table>
 				
-					<p><b>Elemental Attributes : </b> Normal, Water, Earth, Grass, Fire, Lightning, Air, Light, and Dark</p>
+				<p><b>Elemental Attributes : </b> Normal, Water, Earth, Grass, Fire, Lightning, Air, Light, and Dark.</p>
+				<p><b>Terrain : </b> Valley, Sea, Labyrinth, Forest, Wasteland, Mountains, Aether, Underworld, Fortress</p>
+				<p></b>Weather System : </b> Rain, Storm, Blizzard, Forest Fire, Tornado, Earthquake, Ambush, Monster Attack </p>
+								
 				<br>
+
 			</figure>
 		<hr>
 		<a href="https://www.w3schools.com/html/">Help</a>
