--- a/WebProject.html
+++ b/WebProject.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" href="ProjectStyle.css">
 	</head>
 	<body>
-		<h1>ᛏᛃᚱ᛫ᛊᛏᛖᛁᚾ᛫ᛒᛟᚨᚱᛞ᛫ᚷᚨᛗᛖ᛫:᛫ᚱᚢᛚᛖᛒᛟᛟᚲ | Tyr-Stein Board Game : Rule Book</h1>
+		<h1><img src="Fire Sprite.gif" alt="*" width="50" height="50"> ᛏᛃᚱ᛫ᛊᛏᛖᛁᚾ᛫ᛒᛟᚨᚱᛞ᛫ᚷᚨᛗᛖ᛫:᛫ᚱᚢᛚᛖᛒᛟᛟᚲ | Tyr-Stein Board Game : Rule Book <img src="Fire Sprite.gif" alt="*" width="50" height="50"></h1>
 		<hr>
 		<audio controls src="Flamerock Refuge.mp3"><p>Audio doesn't work</p></audio>
 		<audio controls src="Mines of Avarice.mp3"><p>Audio doesn't work</p></audio>
