--- a/WebProject.html
+++ b/WebProject.html
@@ -38,7 +38,7 @@
 				
 			<p><b>Elemental Attributes : </b> Normal, Water, Earth, Grass, Fire, Lightning, Air, Light, and Dark.</p>
 			<p><b>Terrain : </b> Valley, Sea, Labyrinth, Forest, Wasteland, Mountains, Aether, Underworld, Fortress</p>
-			<p><b>Weather System : </b> Rain, Storm, Blizzard, Forest Fire, Tornado, Earthquake, Ambush, Monster Attack </p>
+			<p><b>Terrain Encounters : </b> Rain, Storm, Blizzard, Forest Fire, Tornado, Earthquake, Ambush, Monster Attack </p>
 								
 			<br>
 
