--- a/index.html
+++ b/index.html
@@ -1,9 +1,44 @@
-<!DOCTYPE html>
+<!DOCTYPE>
 <html>
-  <head>
-        <title>Index</title>
-  </head>
-  <body>
-      <p>This is a test</p>
-  </body>
+	<head>
+		<title>Index</title>
+		<meta charset="UTF-8">
+        	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+        	<link rel="stylesheet" href="main.css">
+		<style>
+			li { color : blue; }
+			body { margin: 0; }
+			li { text-align: center; }
+			body>header { text-align: center; }
+			body>header>ol>li {
+    						margin: 0;
+    						padding: 0;
+    						background-color: blue;
+    						list-style-type: none;
+										}
+			body>header>nav>ol>li :hover { background-color: black; }
+			body>header>nav>ol>li :active { background-color: blue; }
+			body>header>nav>ol>li>a {
+    							display: block;
+    							padding: 1em;
+    							color: White;
+    							text-decoration: none;
+										}
+			body>main { padding: 1em; }
+			body>header>nav>ol>li{ display: inline-block; }
+		</style>
+	</head>
+	<body>
+		<header>
+		<nav>
+			<ol>
+				<li>Lab 5 : Invisible Menu - </li>
+				<li><a href="Lab1">Lab 1: A Poem </a></li>
+				<li><a href="Lab2">Lab 2: Social Media </a></li>
+				<li><a href="https://1nternetuser.github.io/Test-/index.html">Lab 3: Github </a></li>
+				<li><a href="Alignment Chart">Lab 4: Alignment Chart </a></li>
+			</ol>
+		</nav>
+		</header>
+	</body>
 </html>
