--- a/WebProject.html
+++ b/WebProject.html
@@ -27,7 +27,7 @@
 			</dl>				
 
 			<table>
-				<tr><th>Warrior-Types:</th><th>&emsp;</th><th><b>&emsp; Elemental Attributes :</></th>	</tr>
+				<tr><th>Warrior-Types: </th></tr>
 				<tr><td>Goblins</td><td>Orcs</td></tr>
 				<tr><td>Dwarves</td><td>Machines</td></tr>
 				<tr><td>Elves</td><td>Fairies</td></tr>
@@ -36,7 +36,9 @@
 				<tr><td>Druids</td><td>Nature</td></tr>
 			</table>
 				
-			<p><b>Elemental Attributes : </b> Normal, Water, Earth, Grass, Fire, Lightning, Air, Light, and Dark.</p>
+			<table>
+				<tr><th><b>Elemental Attributes : </b></th></tr> 
+				<tr><td>Normal, Water, Earth, Grass, Fire, Lightning, Air, Light, and Dark.</tr></td>
 			<p><b>Terrain : </b> Valley, Sea, Labyrinth, Forest, Wasteland, Mountains, Aether, Underworld, Fortress</p>
 			<p><b>Terrain Encounters : </b> Rain, Storm, Blizzard, Forest Fire, Tornado, Earthquake, Ambush, Monster Attack </p>
 								
