--- a/WebProject.html
+++ b/WebProject.html
@@ -40,6 +40,12 @@
 				<tr><td>Normal, Water, Earth, Grass, Fire, Lightning, Air, Light, and Dark.</tr></td>
 			</table>
 			</table>
+					
+			<table>
+				<tr><th><b>Elemental Attributes : </b></th></tr> 
+				<tr><td>Normal, Water, Earth, Grass, Fire, Lightning, Air, Light, and Dark.</tr></td>
+			</table>
+
 			<p><b>Terrain : </b> Valley, Sea, Labyrinth, Forest, Wasteland, Mountains, Aether, Underworld, Fortress</p>
 			<p><b>Terrain Encounters : </b> Rain, Storm, Blizzard, Forest Fire, Tornado, Earthquake, Ambush, Monster Attack </p>
 								
