--- a/WebProject.html
+++ b/WebProject.html
@@ -36,7 +36,7 @@
 				<tr><td>Druids</td><td>Nature</td></tr>
 				
 			</table>
-					
+		<p>Test</p>		
 			<table>
 				<tr><th><b>Elemental Attributes : </b></th></tr> 
 				<tr><td>Normal, Water, Earth, Grass, Fire, Lightning, Air, Light, and Dark.</tr></td>
