--- a/WebProject.html
+++ b/WebProject.html
@@ -36,14 +36,14 @@
 				<tr><td>Druids</td><td>Nature</td></tr>
 				
 			</table>
-		<p>Test</p>		
+		<!--<p>Test</p>		
 			<table>
 				<tr><th><b>Elemental Attributes : </b></th></tr> 
 				<tr><td>Normal, Water, Earth, Grass, Fire, Lightning, Air, Light, and Dark.</tr></td>
 			</table>
 			<p><b>Terrain : </b> Valley, Sea, Labyrinth, Forest, Wasteland, Mountains, Aether, Underworld, Fortress</p>
 			<p><b>Terrain Encounters : </b> Rain, Storm, Blizzard, Forest Fire, Tornado, Earthquake, Ambush, Monster Attack </p>
-								
+		-->						
 			<br>
 
 	</figure>
