--- a/WebProject.html
+++ b/WebProject.html
@@ -34,7 +34,11 @@
 				<tr><td>Dark Elves</td><td>Pixies</td></tr>
 				<tr><td>Humans</td><td>Guardians</td></tr>
 				<tr><td>Druids</td><td>Nature</td></tr>
-				
+			
+				<table>
+				<tr><th><b>Elemental Attributes : </b></th></tr> 
+				<tr><td>Normal, Water, Earth, Grass, Fire, Lightning, Air, Light, and Dark.</tr></td>
+				</table>	
 			</table>
 			
 			<table>
