--- a/WebProject.html
+++ b/WebProject.html
@@ -36,12 +36,8 @@
 				<tr><td>Druids</td><td>Nature</td></tr>
 				
 			</table>
-			
-			<table>
-				<tr><th><b>Elemental Attributes : </b></th></tr> 
-				<tr><td>Normal, Water, Earth, Grass, Fire, Lightning, Air, Light, and Dark.</tr></td>
-			</table>
 
+			<p><b>Elemental Attributes : </b> Normal, Water, Earth, Grass, Fire, Lightning, Air, Light, and Dark.</p>
 			<p><b>Terrain : </b> Valley, Sea, Labyrinth, Forest, Wasteland, Mountains, Aether, Underworld, Fortress</p>
 			<p><b>Terrain Encounters : </b> Rain, Storm, Blizzard, Forest Fire, Tornado, Earthquake, Ambush, Monster Attack </p>
 								
