--- a/WebProject.html
+++ b/WebProject.html
@@ -14,6 +14,9 @@
 
 			<p>The making of this game is originally inspired from the rules of <i>Yu-Gi-Oh! The Duelists of the Roses</i>, yet it also attributes to some elements from Chess and Dungeons and Dragons.</p>
 			<p>The game has two types of gamemodes: <b>War Zone (WZ)</b> and <b>Battlefield (BF)</b>; <b>WZ</b> is the expanded version that accounts to many different variables to win the game while <b>BF</b> is a smaller, fast-pace, and simplistic gamemode.</p>
+			<table>
+				<tr><th><b>Table of Contents :</b></th></tr>
+			</table>
 			<dl>
 				<dt><b>Board Setup :</b></dt>
 					<dd>Grid : 15x15 <b>(WZ)</b> ; 7x7 <b>(BF)</b></dd>
