--- a/WebProject.html
+++ b/WebProject.html
@@ -12,11 +12,19 @@
 		<audio controls src="Tsungi Horn ATLA OST.mp3"><p>Audio doesn't work</p></audio>
 		<audio controls src="Overture GoW.mp3"><p>Audio doesn't work</p></audio>
 
+		<style>
+			figure { 	
+					margin: 1em;
+        				padding: 1em;
+        				border: 1em thin solid; 
+				}
+		</style>
+
 			<p>The making of this game is originally inspired from the rules of <i>Yu-Gi-Oh! The Duelists of the Roses</i>, yet it also attributes to some elements from Chess and Dungeons and Dragons.</p>
 			<p>The game has two types of gamemodes: <b>War Zone (WZ)</b> and <b>Battlefield (BF)</b>; <b>WZ</b> is the expanded version that accounts to many different variables to win the game while <b>BF</b> is a smaller, fast-pace, and simplistic gamemode.</p>
-			<table>
+			<figure>
 				<tr><th><b>Table of Contents :</b></th></tr>
-			</table>
+			</figure>
 			<dl>
 				<dt><b>Board Setup :</b></dt>
 					<dd>Grid : 15x15 <b>(WZ)</b> ; 7x7 <b>(BF)</b></dd>
