--- a/WebProject.html
+++ b/WebProject.html
@@ -1,7 +1,10 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-		<title>Web Project</title>
+		<title>Web Project</title>        
+		<meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="main.css">
 		<link rel="stylesheet" href="ProjectStyle.css">
 	</head>
 	<body>
@@ -23,7 +26,7 @@
 			<p>The making of this game is originally inspired from the rules of <i>Yu-Gi-Oh! The Duelists of the Roses</i>, yet it also attributes to some elements from Chess and Dungeons and Dragons.</p>
 			<p>The game has two types of gamemodes: <b>War Zone (WZ)</b> and <b>Battlefield (BF)</b>; <b>WZ</b> is the expanded version that accounts to many different variables to win the game while <b>BF</b> is a smaller, fast-pace, and simplistic gamemode.</p>
 			<figure>
-				<tr><th><b>Table of Contents :</b></th></tr>
+				<b> Table of Contents : </b>
 			</figure>
 			<dl>
 				<dt><b>Board Setup :</b></dt>
