--- a/WebProject.html
+++ b/WebProject.html
@@ -3,8 +3,7 @@
 <head>
 		<title>Web Project</title>        
 		<meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="main.css">
+        	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="ProjectStyle.css">
 	</head>
 	<body>
@@ -27,6 +26,14 @@
 			<p>The game has two types of gamemodes: <b>War Zone (WZ)</b> and <b>Battlefield (BF)</b>; <b>WZ</b> is the expanded version that accounts to many different variables to win the game while <b>BF</b> is a smaller, fast-pace, and simplistic gamemode.</p>
 			<figure>
 				<b> Table of Contents : </b>
+				<nav>
+					<ul>
+                    				<li><a href="#">Link A</a></li>
+                   				<li><a href="#">Link B</a></li>
+                    				<li><a href="#">Link C</a></li>
+                    				<li><a href="#">Link D</a></li>
+               				 </ul>
+				</nav>
 			</figure>
 			<dl>
 				<dt><b>Board Setup :</b></dt>
