--- a/WebProject.html
+++ b/WebProject.html
@@ -5,7 +5,7 @@
 		<meta charset="UTF-8">
         	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="ProjectStyle.css">
-	</head>
+</head>
 	<body>
 		<h1><img src="Fire Sprite.gif" alt="*" width="64" height="64"> ᛏᛃᚱ᛫ᛊᛏᛖᛁᚾ᛫ᛒᛟᚨᚱᛞ᛫ᚷᚨᛗᛖ᛫:᛫ᚱᚢᛚᛖᛒᛟᛟᚲ | Tyr-Stein Board Game : Rule Book <img src="Fire Sprite.gif" alt="*" width="64" height="64"></h1>
 		<hr>
@@ -28,13 +28,14 @@
 				<b> Table of Contents : </b>
 				<nav>
 					<ul>
-                    				<li><a href="#">Link A</a></li>
-                   				<li><a href="#">Link B</a></li>
-                    				<li><a href="#">Link C</a></li>
-                    				<li><a href="#">Link D</a></li>
+                    				<li><a href="#">Basics</a></li>
+                   				<li><a href="#">Card Movements</a></li>
+                    				<li><a href="#">Terrain</a></li>
+                    				<li><a href="#">Encounters</a></li>
                				 </ul>
 				</nav>
 			</figure>
+
 			<dl>
 				<dt><b>Board Setup :</b></dt>
 					<dd>Grid : 15x15 <b>(WZ)</b> ; 7x7 <b>(BF)</b></dd>
