--- a/WebProject.html
+++ b/WebProject.html
@@ -14,6 +14,7 @@
 		<audio controls src="Tsungi Horn ATLA OST.mp3"><p>Audio doesn't work</p></audio>
 		<audio controls src="Overture GoW.mp3"><p>Audio doesn't work</p></audio>
 
+		<figure style="border: thin solid;">Table of Contents</figure>
 		<style>
 			figure { 	
 					margin: 1em;
