--- a/WebProject.html
+++ b/WebProject.html
@@ -25,9 +25,11 @@
 			<p>The making of this game is originally inspired from the rules of <i>Yu-Gi-Oh! The Duelists of the Roses</i>, yet it also attributes to some elements from Chess and Dungeons and Dragons.</p>
 			<p>The game has two types of gamemodes: <b>War Zone (WZ)</b> and <b>Battlefield (BF)</b>; <b>WZ</b> is the expanded version that accounts to many different variables to win the game while <b>BF</b> is a smaller, fast-pace, and simplistic gamemode.</p>
 			
-			<figure style="border: thin solid; 1em thin solid;"><b>Table of Contents : </b></figure>
+			<figure style="border: thin solid; 1em thin solid;">
+			<figure style="margin: 1em;">
+        		<figure style="padding: 1em;">
 			<figure>
-				<b> Table of Contents : </b>
+				<b>Table of Contents : </b>
 				<nav>
 					<ul>
                     				<li><a href="#">Basics</a></li>
@@ -35,7 +37,7 @@
                     				<li><a href="#">Terrain</a></li>
                     				<li><a href="#">Encounters</a></li>
                				 </ul>
-				</nav>
+				</nav>				
 			</figure>
 
 			<dl>
