--- a/WebProject.html
+++ b/WebProject.html
@@ -18,12 +18,14 @@
 			<p>The game has two types of gamemodes: <b>War Zone (WZ)</b> and <b>Battlefield (BF)</b>; <b>WZ</b> is the expanded version that accounts to many different variables to win the game while <b>BF</b> is a smaller, fast-pace, and simplistic gamemode.</p>
 			
 			<style>
-				<figure>{ 
+				<figure> { 
 						border: thin solid; 1em thin solid;
 						margin: 1em;
 						padding: 1em;
-					}
+					 }
 			</style>	
+			
+			<figure>	
 				<b>Table of Contents : </b>
 				<nav>
 					<ul>
@@ -33,7 +35,8 @@
                     				<li><a href="#">Encounters</a></li>
                				 </ul>
 				</nav>				
-
+			</figure>
+			
 			<dl>
 				<dt><b>Board Setup :</b></dt>
 					<dd>Grid : 15x15 <b>(WZ)</b> ; 7x7 <b>(BF)</b></dd>
