--- a/WebProject.html
+++ b/WebProject.html
@@ -21,7 +21,7 @@
 				<figure> { 
 						margin: 1em;
 						padding: 1em;	
-						border: 1em thin solid;
+						border: 1em solid;
 					 }
 			</style>	
 			
