--- a/WebProject.html
+++ b/WebProject.html
@@ -20,8 +20,8 @@
 			<style>
 				<figure> { 
 						margin: 1em;
-						padding: 1em;	
-						border: 1em solid;
+        					padding: 1em;
+        					border: 1em thin solid;
 					 }
 			</style>	
 			
