--- a/WebProject.html
+++ b/WebProject.html
@@ -17,15 +17,7 @@
 			<p>The making of this game is originally inspired from the rules of <i>Yu-Gi-Oh! The Duelists of the Roses</i>, yet it also attributes to some elements from Chess and Dungeons and Dragons.</p>
 			<p>The game has two types of gamemodes: <b>War Zone (WZ)</b> and <b>Battlefield (BF)</b>; <b>WZ</b> is the expanded version that accounts to many different variables to win the game while <b>BF</b> is a smaller, fast-pace, and simplistic gamemode.</p>
 			
-			<style>
-				<figure> { 
-						margin: 1em;
-        					padding: 1em;
-        					border: 1em thin solid;
-					 }
-			</style>	
-			
-			<figure>	
+			<figure style="margin: 1em; padding: 1em; border: 1em thin solid;">
 				<b>Table of Contents : </b>
 				<nav>
 					<ul>
@@ -34,8 +26,9 @@
                     				<li><a href="#">Terrain</a></li>
                     				<li><a href="#">Encounters</a></li>
                				 </ul>
-				</nav>				
-			</figure>
+				</nav>	
+				}
+			</figure>	
 			
 			<dl>
 				<dt><b>Board Setup :</b></dt>
