--- a/WebProject.html
+++ b/WebProject.html
@@ -17,7 +17,13 @@
 			<p>The making of this game is originally inspired from the rules of <i>Yu-Gi-Oh! The Duelists of the Roses</i>, yet it also attributes to some elements from Chess and Dungeons and Dragons.</p>
 			<p>The game has two types of gamemodes: <b>War Zone (WZ)</b> and <b>Battlefield (BF)</b>; <b>WZ</b> is the expanded version that accounts to many different variables to win the game while <b>BF</b> is a smaller, fast-pace, and simplistic gamemode.</p>
 			
-			<figure style="margin: 1em; padding: 1em; border: 1em thin solid;">
+			<style>
+				figure { margin: 1em; 
+					 padding: 1em; 
+					 border: 1em thin solid; 
+					}
+			</style>
+				<figure>	
 				<b>Table of Contents : </b>
 				<nav>
 					<ul>
