--- a/WebProject.html
+++ b/WebProject.html
@@ -44,6 +44,7 @@
 					<dd>Card Limit: Only 5 Soldier and 5 Magic/Trap Cards can be on your side of the field</dd>
 				
 					<dt><b>Movement Types :</b></dt>
+						<dd>How to Capture : </dd>
 					
 			</dl>				
 
