--- a/WebProject.html
+++ b/WebProject.html
@@ -42,7 +42,7 @@
 					<dd>Summoning Level : 0-10</dd>
 					<dd>Cards Required : 50</dd>
 					<dd>Card Limit: Only 5 Soldier and 5 Magic/Trap Cards can be on your side of the field</dd>
-				
+				<blockline>
 					<dt><b>Movement Types :</b></dt>
 						<dd>How to Capture : </dd>
 					
