--- a/WebProject.html
+++ b/WebProject.html
@@ -23,14 +23,15 @@
 					 border: 1em thin solid; 
 					}
 			</style>
+
 				<figure>	
-				<b>Table of Contents : </b>
 				<nav>
-					<ul>
-                    				<li><a href="#">Basics</a></li>
-                   				<li><a href="#">Card Movements</a></li>
-                    				<li><a href="#">Terrain</a></li>
-                    				<li><a href="#">Encounters</a></li>
+					<dl>
+						<dt><b>Table of Contents : </b></dt>
+                    				<dd><a href="#">Basics</a></dd>
+                   				<dd><a href="#">Card Movements</a></dd>
+                    				<dd><a href="#">Terrain</a></dd>
+                    				<dd><a href="#">Encounters</a></dd>
                				 </ul>
 				</nav>	
 				</figure>
