--- a/WebProject.html
+++ b/WebProject.html
@@ -8,7 +8,9 @@
 </head>
 	<body>
 		<h1><img src="Fire Sprite.gif" alt="*" width="64" height="64"> ᛏᛃᚱ᛫ᛊᛏᛖᛁᚾ᛫ᛒᛟᚨᚱᛞ᛫ᚷᚨᛗᛖ᛫:᛫ᚱᚢᛚᛖᛒᛟᛟᚲ | Tyr-Stein Board Game : Rule Book <img src="Fire Sprite.gif" alt="*" width="64" height="64"></h1>
+		
 		<hr>
+		
 		<audio controls src="Flamerock Refuge.mp3"><p>Audio doesn't work</p></audio>
 		<audio controls src="Mines of Avarice.mp3"><p>Audio doesn't work</p></audio>
 		<audio controls src="Tsungi Horn ATLA OST.mp3"><p>Audio doesn't work</p></audio>
@@ -18,9 +20,10 @@
 			<p>The game has two types of gamemodes: <b>War Zone (WZ)</b> and <b>Battlefield (BF)</b>; <b>WZ</b> is the expanded version that accounts to many different variables to win the game while <b>BF</b> is a smaller, fast-pace, and simplistic gamemode.</p>
 			
 			<style>
-				figure { margin: 1em; 
-					 padding: 1em; 
-					 border: 1em thin solid; 
+				figure { 
+						margin: 1em; 
+						padding: 1em; 
+						border: 1em thin solid; 
 					}
 			</style>
 
@@ -45,8 +48,11 @@
 					<dd>Card Limit: Only 5 Soldier and 5 Magic/Trap Cards can be on your side of the field</dd>
 				<blockline>
 					<dt><b>Movement Types :</b></dt>
-						<dd>How to Capture : </dd>
-					
+						<dl>
+							<dt>Infantry Movement : </dt>
+							<dd>An infantry is the most general movement in the game. Once it's your turn, each card can move one unit that is horizontal or vertical as long as the space is vacant.</dd>
+							<dt>How to Capture : </dt>
+							<dd> The advantage to capturing an enemy</dd> 
 			</dl>				
 
 			<table>
