--- a/WebProject.html
+++ b/WebProject.html
@@ -46,14 +46,15 @@
 					<dd>Summoning Level : 0-10</dd>
 					<dd>Cards Required : 50</dd>
 					<dd>Card Limit: Only 5 Soldier and 5 Magic/Trap Cards can be on your side of the field</dd>
-				<blockline>
+				<blockquote>
 					<dt><b>Movement Types :</b></dt>
-						<dl>
-							<dt>Infantry Movement : </dt>
-							<dd>An infantry is the most general movement in the game. Once it's your turn, each card can move one unit that is horizontal or vertical as long as the space is vacant.</dd>
-							<dt>How to Capture : </dt>
-							<dd> The advantage to capturing an enemy</dd> 
-			</dl>				
+				</blockquote>		
+					<dl>
+						<dt>&emsp; Infantry Movement : </dt>
+						<dd>An infantry is the most general movement in the game. Once it's your turn, each card can move one unit that is horizontal or vertical as long as the space is vacant.</dd>
+						<dt>How to Capture : </dt>
+						<dd> The advantage to capturing an enemy</dd> 
+					</dl>				
 
 			<table>
 				<tr><th>Warrior-Types: </th></tr>
