--- a/WebProject.html
+++ b/WebProject.html
@@ -31,15 +31,16 @@
 				<nav>
 					<dl>
 						<dt><b>Table of Contents : </b></dt>
-                    				<dd><a href="#">Basics</a></dd>
-                   				<dd><a href="#">Card Movements</a></dd>
-                    				<dd><a href="#">Terrain</a></dd>
-                    				<dd><a href="#">Encounters</a></dd>
+                    				<dd><a href="#B">Basics</a></dd>
+                   				<dd><a href="#MT">Card Movements</a></dd>
+                    				<dd><a href="#T">Terrain</a></dd>
+                    				<dd><a href="#TE">Encounters</a></dd>
                				 </ul>
 				</nav>	
 				</figure>
 			
 			<dl>
+				<section id="Basics">
 				<dt><b>Board Setup :</b></dt>
 					<dd>Grid : 15x15 <b>(WZ)</b> ; 7x7 <b>(BF)</b></dd>
 					<dd>Life Points : 10K <b>(WZ)</b> ; 5K <b>(BF)</b></dd>
@@ -47,6 +48,7 @@
 					<dd>Cards Required : 50</dd>
 					<dd>Card Limit: Only 5 Soldier and 5 Magic/Trap Cards can be on your side of the field</dd>
 				<blockquote>
+					<section id="MT">
 					<dt><b>Movement Types :</b></dt>
 				</blockquote>		
 					<dl>
@@ -69,7 +71,9 @@
 			</table>
 
 			<p><b>Elemental Attributes : </b> Normal, Water, Earth, Grass, Fire, Lightning, Air, Light, and Dark.</p>
+			<section id="T">
 			<p><b>Terrain : </b> Valley, Sea, Labyrinth, Forest, Wasteland, Mountains, Aether, Underworld, Fortress</p>
+			<section id="TE">
 			<p><b>Terrain Encounters : </b> Rain, Storm, Blizzard, Forest Fire, Tornado, Earthquake, Ambush, Monster Attack </p>
 								
 			<br>
