--- a/WebProject.html
+++ b/WebProject.html
@@ -52,11 +52,13 @@
 					<dt><b>Movement Types :</b></dt>
 				</blockquote>		
 					<dl>
-						<dt>&emsp; Infantry Movement : </dt>
-						<dd>An infantry is the most general movement in the game. Once it's your turn, each card can move one unit that is horizontal or vertical as long as the space is vacant.</dd>
+						<blockquote>
+						<dt>Infantry Movement : </dt>
+						<dd>&emsp; An infantry is the most general movement in the game. Once it's your turn, each card can move one unit that is horizontal or vertical as long as the space is vacant.</dd>
 						<dt>How to Capture : </dt>
 						<dd> The advantage to capturing an enemy</dd> 
-					</dl>	
+					</dl>
+						</blockquote>
 			</dl>
 
 			<table>
