--- a/WebProject.html
+++ b/WebProject.html
@@ -40,7 +40,7 @@
 				</figure>
 			
 			<dl>
-				<section id="Basics">
+				<section id="B">
 				<dt><b>Board Setup :</b></dt>
 					<dd>Grid : 15x15 <b>(WZ)</b> ; 7x7 <b>(BF)</b></dd>
 					<dd>Life Points : 10K <b>(WZ)</b> ; 5K <b>(BF)</b></dd>
