--- a/WebProject.html
+++ b/WebProject.html
@@ -52,9 +52,9 @@
 					
 					<dl>
 						<blockquote>
-						<dt>Infantry Movement : </dt>
+							<dt><u>Infantry Movement</u> : </dt>
 						<dd>An infantry is the most general movement in the game. Once it's your turn, each card can move one unit that is horizontal or vertical as long as the space is vacant.</dd>
-						<dt>How to Capture : </dt>
+							<dt><u>How to Capture</u> : </dt>
 						<dd>The advantage to capturing an enemy</dd> 
 					</dl>
 						</blockquote>
