--- a/WebProject.html
+++ b/WebProject.html
@@ -54,10 +54,10 @@
 						<blockquote>
 							<dt><u>Infantry Movement</u> : </dt>
 						<dd>An infantry is the most general movement in the game. Once it's your turn, each card can move one unit that is horizontal or vertical as long as the space is vacant.</dd>
-							<dt><u>Scout Horse Movement</u> : </dt>
-						<dd>The Scout Horse is a power-up the player has earned through card or acquiring in the field. The benefit of it is that it can move twice as far when compared to an infantry. This is useful for to mobilize your forces much faster than the enemy can.</dd>
+							<dt><u>Vanguard Movement</u> : </dt>
+						<dd>The <i>Vanguard</i> is a power-up the player has earned through card or on the field i.e. obtaining a horse. The benefit of it is that it can move twice as far when compared to an <i>infantry</i>. This is useful for mobilizing your forces much faster than the enemy can or have your warrior spearhead your army to battle.</dd>
 							<dt><u>Cavalry Movement</u> : </dt>
-						<dd>The Cavalry movement is a type of movement that focuses on moving into a more defensive position. When compared to an infantry, the Cavalry moves diagonally as well (needs to move vertically or horizontally to reach its diagonal destination, not simply from Point A to Point B).</dd>
+							<dd>The <i>Cavalry</i> movement is a type of unit that moves to set up a position rather leading straight ahead. When compared to an <i>Infantry</i>, the <i>Cavalry</i> moves diagonally while the <i>Infantry</i> (needs to move vertically or horizontally to reach its diagonal destination, not simply from Point A to Point B).</dd>
 							<dt><u>How to Capture</u> : </dt>
 						<dd>The advantage to capturing an enemy is to </dd> 
 					</dl>
