--- a/WebProject.html
+++ b/WebProject.html
@@ -47,7 +47,7 @@
 							<dt><u>Infantry Movement</u> : </dt>
 						<dd>An infantry is the most general movement in the game. Once it's your turn, each card can move one unit that is horizontal or vertical as long as the space is vacant.</dd>
 							<dt><u>Vanguard Movement</u> : </dt>
-						<dd>The <i>Vanguard</i> is a power-up the player has earned through card or on the field i.e. obtaining a horse. The benefit of it is that it can move twice as far when compared to an <i>infantry</i>. This is useful for mobilizing your forces much faster than the enemy can or have your warrior spearhead your army to battle.</dd>
+						<dd>The <i>Vanguard</i> is a power-up the player has earned through card or on the field i.e. obtaining a horse. The benefit of it is that it can move twice as far when compared to an <i>infantry</i>. This is useful for mobilizing your forces much faster than the enemy can or have your warrior spearhead your army into battle.</dd>
 							<dt><u>Cavalry Movement</u> : </dt>
 							<dd>The <i>Cavalry</i> movement is a type of unit that moves to set up a position rather leading straight ahead. When compared to an <i>Infantry</i>, the <i>Cavalry</i> moves diagonally while the <i>Infantry</i> (needs to move vertically or horizontally to reach its diagonal destination, not simply from Point A to Point B).</dd>
 							<dt><u>How to Capture</u> : </dt>
@@ -64,7 +64,7 @@
 				<tr><td>Dark Elves</td><td>Pixies</td></tr>
 				<tr><td>Humans</td><td>Guardians</td></tr>
 				<tr><td>Druids</td><td>Nature</td></tr>
-				
+				<p> Test </p>
 			</table>
 
 			<p><b>Elemental Attributes : </b> Normal, Water, Earth, Grass, Fire, Lightning, Air, Light, and Dark.</p>
