--- a/WebProject.html
+++ b/WebProject.html
@@ -46,6 +46,7 @@
 						<blockquote>
 							<dt><u>Infantry Movement</u> : </dt>
 						<dd>An infantry is the most general movement in the game. Once it's your turn, each card can move one unit that is horizontal or vertical as long as the space is vacant.</dd>
+							<img src="Infantry.png" alt="Image failed to load" width="696" height="696">
 							<dt><u>Vanguard Movement</u> : </dt>
 						<dd>The <i>Vanguard</i> is a power-up the player has earned through card or on the field i.e. obtaining a horse. The benefit of it is that it can move twice as far when compared to an <i>Infantry</i>. This is useful for mobilizing your forces much faster than the enemy can or have your warrior spearhead your army into battle.</dd>
 							<dt><u>Cavalry Movement</u> : </dt>
