--- a/WebProject.html
+++ b/WebProject.html
@@ -51,10 +51,14 @@
 							</p>
 							<dt><u>Vanguard Movement</u> : </dt>
 						<dd>The <i>Vanguard</i> is a power-up the player has earned through card or on the field i.e. obtaining a horse. The benefit of it is that it can move twice as far when compared to an <i>Infantry</i>. This is useful for mobilizing your forces much faster than the enemy can or have your warrior spearhead your army into battle.</dd>
-							<img src="Vanguard.png" alt="Image failed to load" width="116" height="116">
+							<p>
+							&emsp; &emsp; <img src="Vanguard.png" alt="Image failed to load" width="116" height="116">
+							</p>
 							<dt><u>Cavalry Movement</u> : </dt>
 							<dd>The <i>Cavalry</i> movement is a type of unit that moves to set up a position rather leading straight ahead. When compared to an <i>Infantry</i>, the <i>Cavalry</i> moves diagonally while the <i>Infantry</i> (needs to move vertically or horizontally to reach its diagonal destination, not simply from Point A to Point B).</dd>
-							<img src="Cavalry.png" alt="Image failed to load" width="116" height="116">
+							<p>
+							&emsp; &emsp; <img src="Cavalry.png" alt="Image failed to load" width="116" height="116">
+							</p>
 							<dt><u>How to Capture</u> : </dt>
 						<dd>The advantage to capturing an enemy is to </dd> 
 					</dl>
