--- a/WebProject.html
+++ b/WebProject.html
@@ -45,7 +45,7 @@
 					<dl>
 						<blockquote>
 							<dt><u>Infantry Movement</u> : </dt>
-						<dd> <img src="Infantry.png" alt="Image failed to load" width="116" height="116"> An infantry is the most general movement in the game. Once it's your turn, each card can move one unit that is horizontal or vertical as long as the space is vacant.</dd>
+						<dd>An infantry is the most general movement in the game. Once it's your turn, each card can move one unit that is horizontal or vertical as long as the space is vacant.</dd>
 							<p>
 							&emsp; &emsp; <img src="Infantry.png" alt="Image failed to load" width="116" height="116">
 							</p>
