--- a/WebProject.html
+++ b/WebProject.html
@@ -44,23 +44,26 @@
 					
 					<dl>
 						<blockquote>
-							<dt><u>Infantry Movement</u> : </dt>
-						<dd>An infantry is the most general movement in the game. Once it's your turn, each card can move one unit that is horizontal or vertical as long as the space is vacant.</dd>
+						<dt><u>Infantry Movement</u> : </dt>
+							<dd>An infantry is the most general movement in the game. Once it's your turn, each card can move one unit that is horizontal or vertical as long as the space is vacant.</dd>
 							<p>
 							&emsp; &emsp; <img src="Infantry.png" alt="Image failed to load" width="116" height="116">
 							</p>
-							<dt><u>Vanguard Movement</u> : </dt>
-						<dd>The <i>Vanguard</i> is a power-up the player has earned through card or on the field i.e. obtaining a horse. The benefit of it is that it can move twice as far when compared to an <i>Infantry</i>. This is useful for mobilizing your forces much faster than the enemy can or have your warrior spearhead your army into battle.</dd>
+						<dt><u>Vanguard Movement</u> : </dt>
+							<dd>The <i>Vanguard</i> is a power-up the player has earned through card or on the field i.e. obtaining a horse. The benefit of it is that it can move twice as far when compared to an <i>Infantry</i>. This is useful for mobilizing your forces much faster than the enemy can or have your warrior spearhead your army into battle.</dd>
 							<p>
 							&emsp; &emsp; <img src="Vanguard.png" alt="Image failed to load" width="116" height="116">
 							</p>
-							<dt><u>Cavalry Movement</u> : </dt>
+						<dt><u>Cavalry Movement</u> : </dt>
 							<dd>The <i>Cavalry</i> movement is a type of unit that moves to set up a position rather leading straight ahead. When compared to an <i>Infantry</i>, the <i>Cavalry</i> moves diagonally while the <i>Infantry</i> (needs to move vertically or horizontally to reach its diagonal destination, not simply from Point A to Point B).</dd>
 							<p>
 							&emsp; &emsp; <img src="Cavalry.png" alt="Image failed to load" width="116" height="116">
 							</p>
-							<dt><u>How to Capture</u> : </dt>
-						<dd>The advantage to capturing an enemy is to </dd> 
+						<dt><u>How to Capture</u> : </dt>
+							<dd>The advantage to capturing an enemy is to </dd> 
+							<p>
+							&emsp; &emsp; <img src="Field.png" alt="Image failed to load" width="116" height="116"> <img src="Field (1).png" alt="Image failed to load" width="116" height="116"> <img src="Field (2).png" alt="Image failed to load" width="116" height="116"> <img src="Field (3).png" alt="Image failed to load" width="116" height="116">
+							</p>
 					</dl>
 						</blockquote>
 			</dl>
