--- a/WebProject.html
+++ b/WebProject.html
@@ -38,29 +38,39 @@
 					<dd>Life Points : 10K <b>(WZ)</b> ; 5K <b>(BF)</b></dd>
 					<dd>Summoning Level : 0-10</dd>
 					<dd>Cards Required : 50</dd>
-					<dd>Card Limit: Only 5 Soldier and 5 Magic/Trap Cards can be on your side of the field</dd>
+					<dd>Card Limit: Only 5 Warrior and 5 Magic/Trap Cards can be on your side of the field</dd>
 					<section id="MT">
+					
 					<dt><b>Movement Types :</b></dt>
 					
 					<dl>
 						<blockquote>
 						<dt><u>Infantry Movement</u> : </dt>
-							<dd>An infantry is the most general movement in the game. Once it's your turn, each card can move one unit that is horizontal or vertical as long as the space is vacant.</dd>
+							<dd>An <i>Infantry</i> is the most general type of movement in the game. Once it's your turn, each card can move one unit that is horizontal or vertical from that card as long as the space is vacant.</dd>
 							<p>
 							&emsp; &emsp; <img src="Infantry.png" alt="Image failed to load" width="116" height="116">
 							</p>
 						<dt><u>Vanguard Movement</u> : </dt>
-							<dd>The <i>Vanguard</i> is a power-up the player has earned through card or on the field i.e. obtaining a horse. The benefit of it is that it can move twice as far when compared to an <i>Infantry</i>. This is useful for mobilizing your forces much faster than the enemy can or have your warrior spearhead your army into battle.</dd>
+							<dd>The <i>Vanguard</i> is a power-up the player has earned through card or on the field i.e. most commonly riding a horse. The benefit of it is that it can move twice as far when compared to an <i>Infantry</i>. 
+								This is useful for mobilizing your forces much faster than the enemy can or have your warrior spearhead your army into battle. 
+								In addition, this power-up can be passed onto other <i>Warriors</i> as well as yourself. However, it is possible to lose this ability if the horse used were to die, run away, or traded into a village. 
+								The horse needs to be well rested and in top condition for it to be a powerful tool for your army.</dd>
 							<p>
 							&emsp; &emsp; <img src="Vanguard.png" alt="Image failed to load" width="116" height="116">
 							</p>
 						<dt><u>Cavalry Movement</u> : </dt>
-							<dd>The <i>Cavalry</i> movement is a type of unit that moves to set up a position rather leading straight ahead. When compared to an <i>Infantry</i>, the <i>Cavalry</i> moves diagonally while the <i>Infantry</i> (needs to move vertically or horizontally to reach its diagonal destination, not simply from Point A to Point B).</dd>
+							<dd>The <i>Cavalry</i> movement is a type of unit that moves to set up a position rather leading straight ahead. It can be earned the same way as the <i>Vanguard</i>. 
+								When compared to an <i>Infantry</i>, the <i>Cavalry</i> moves diagonally while the <i>Infantry</i> (needs to move vertically or horizontally to reach its diagonal destination, not simply from Point A to Point B).
+								Such as the <i>Vanguard</i>, this power-up can be exchanged and lost if not kept in well maintenance.</dd>
 							<p>
 							&emsp; &emsp; <img src="Cavalry.png" alt="Image failed to load" width="116" height="116">
 							</p>
 						<dt><u>How to Capture</u> : </dt>
-							<dd>The advantage to capturing an enemy is to </dd> 
+							<dd>The advantage to capturing an enemy is to turn the tide of battle with positioning when the foe is too strong to fight against. Capturing a target will keep a maximum of 5 <i>Warrior</i> cards in custody and doing so will allow you to reveal
+								if there's enemy <i>Trap or Spell cards</i> near your cards or even reveal one card in your opponent's hand. You can only reveal one card per turn, and it's not guaranteed for the enemy card to spill the intelligence to you; the primary approach to determine 
+								if the captive will cooperate with you is dependent on a dice roll. The player who rolls the dice number closest to the card's summoning level will decide. If you win the roll, the Warrior tells you what the enemy knows; if the enemy wins, the Warrior resists the
+								the interrogation so you need to try again next turn. You can only interrogate the captive(s) once per turn. Other advantages are that the enemy can't revive them since they're still on the field, and you can use their life to pay a sacrifice or a ritual before your own men.
+								To capture a target you need to surround the enemy -- regardless if it's one or more -- vertically and horizontally such as the examples provided below. Once the enemy is captured, you get to control where the card moves. If the enemy overlaps your captured target, it will be reclaimed and be in the bottom of the enemy's deck.</dd> 
 							<p>
 							&emsp; &emsp; <img src="Field.png" alt="Image failed to load" width="116" height="116"> <img src="Field (1).png" alt="Image failed to load" width="116" height="116"> <img src="Field (2).png" alt="Image failed to load" width="116" height="116"> <img src="Field (3).png" alt="Image failed to load" width="116" height="116">
 							</p>
