--- a/WebProject.html
+++ b/WebProject.html
@@ -66,7 +66,7 @@
 							&emsp; &emsp; <img src="Cavalry.png" alt="Image failed to load" width="116" height="116">
 							</p>
 						<dt><u>How to Capture</u> : </dt>
-							<dd>The advantage to capturing an enemy is to turn the tide of battle with positioning when the foe is too strong to fight against. Capturing a target will keep a maximum of 5 <i>Warrior</i> cards in custody and doing so will allow you to reveal
+							<dd>The advantage to capturing an enemy is to turn the tide of battle with positioning when the foe is too strong to fight against. Capturing a target will keep a maximum of 5 <i>Warrior cards</i> in custody and doing so will allow you to reveal
 								if there's enemy <i>Trap or Spell cards</i> near your cards or even reveal one card in your opponent's hand. You can only reveal one card per turn, and it's not guaranteed for the enemy card to spill the intelligence to you; the primary approach to determine 
 								if the captive will cooperate with you is dependent on a dice roll. The player who rolls the dice number closest to the card's summoning level will decide. If you win the roll, the <i>Warrior</i> tells you what the enemy knows; if the enemy wins, the <i>Warrior</i> resists the
 								the interrogation so you need to try again next turn. You can only interrogate the captive(s) once per turn. Other advantages are that you can strip the enemy from his power-ups, the enemy can't revive them since they're still on the field, and you can use their life to pay a sacrifice or a ritual before your own army.
