--- a/WebProject.html
+++ b/WebProject.html
@@ -41,6 +41,8 @@
 					<dd>Card Limit: Only 5 Warrior and 5 Magic/Trap Cards can be on your side of the field</dd>
 					<section id="MT">
 					
+					<img src="Card Template.png" alt="Image failed to load" width="164" height="242">
+
 					<dt><b>Movement Types :</b></dt>
 					
 					<dl>
