--- a/WebProject.html
+++ b/WebProject.html
@@ -77,7 +77,7 @@
 								if the captive will cooperate with you is dependent on a dice roll. The player who rolls the dice number closest to the card's summoning level will decide. If you win the roll, the <i>Warrior</i> tells you what the enemy knows; if the enemy wins, the <i>Warrior</i> resists the
 								the interrogation so you need to try again next turn. You can only interrogate the captive(s) once per turn. Other advantages are that you can strip the enemy from his power-ups, the enemy can't revive them since they're still on the field, and you can use their life to pay a sacrifice or a ritual before your own army.
 								To capture a target you need to surround the enemy -- regardless if it's one or more -- vertically and horizontally such as the examples provided below. Once the enemy is captured, you get to control where the card moves. If the enemy overlaps your captured target, it will be reclaimed and be in the bottom of the enemy's deck to be used again.
-								If the enemy <i>Deck Leader</i> were to ever end up in a situation like this then it's Game Over.</dd> 
+								If the enemy <i>Deck Leader</i> were to ever end up in a situation like this then it's Game Over. However, to capture the <i>Deck Leader</i> you need to occupy the diagonal spaces as well to prevent the enemy from summoning any more cards.</dd> 
 							<p>
 							&emsp; &emsp; <img src="Field.png" alt="Image failed to load" width="116" height="116"> <img src="Field (1).png" alt="Image failed to load" width="116" height="116"> <img src="Field (2).png" alt="Image failed to load" width="116" height="116"> <img src="Field (3).png" alt="Image failed to load" width="116" height="116">
 							</p>
