--- a/LabWeek7.html
+++ b/LabWeek7.html
@@ -15,7 +15,7 @@
           <p>Lab 7: Navigation Menu (small size)</p>
           <li><a href="#BMS">Bee Movie Script </a></li>
           <li><a href="#S">Shrek Movie Script </a></li>
-          <li><a href="CVS">Corrupted Vor's Speech </a></li>
+          <li><a href="#CVS">Corrupted Vor's Speech </a></li>
          </div>
       </ul>
     </nav>
