--- a/LabWeek7.html
+++ b/LabWeek7.html
@@ -13,9 +13,9 @@
       <ul>
         
           <p>Lab 7: Navigation Menu (small size)</p>
-          <li><a href="#BMS">Bee Movie Script </a></li>
-          <li><a href="#S">Shrek Movie Script </a></li>
-          <li><a href="#CVS">Corrupted Vor's Speech </a></li>
+          <li><a href="#BMS">Bee Movie Script &nbsp;</a>
+          <a href="#S">&nbsp; Shrek Movie Script &nbsp;</a>
+          <a href="#CVS">&nbsp; Corrupted Vor's Speech </a></li>
          
       </ul>
     </nav>
