--- a/LabWeek7.html
+++ b/LabWeek7.html
@@ -25,6 +25,7 @@
   @page { size: auto;
           margin: 0mm;
                         }
+  @media print { @page { margin: 0; } body { margin: 1.6cm; } }
   h1 { text-align: center; }
 </style>
 
