--- a/LabWeek7.html
+++ b/LabWeek7.html
@@ -22,10 +22,7 @@
   </header>
 
 <style>
-  @page { size: auto;
-          margin: 0mm;
-                        }
-  @media print { @page { margin: 0; } body { margin: 1.6cm; } }
+  @media print { @page { size: auto; margin: 0; } body { margin: 1.6cm; } }
   h1 { text-align: center; }
 </style>
 
