--- a/WebProject.html
+++ b/WebProject.html
@@ -41,9 +41,10 @@
 					<dd>Card Limit: Only 5 Warrior and 5 Magic/Trap Cards can be on your side of the field.</dd>
 						
 						<table>
-							<tr><th>Card Anatomy</th></tr>
-							<tr><td>Card Name</td></td><img src="Card Template.png" alt="Image failed to load" width="164" height="242"></td></tr>						
-<br>
+							<tr><th>Card Template: </th></tr>
+							<tr><td>Card Name</td><td><img src="Card Template.png" alt="Image failed to load" width="164" height="242"></td></tr>						
+						</table>
+						<br>
 					
 					<section id="MT">
 					<dt><b>Movement Types :</b></dt>
