--- a/LabWeek7.html
+++ b/LabWeek7.html
@@ -6,6 +6,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="NavLinkWeek6.css">
+  <link rel="stylesheet" href="NightMode.js">
 </head>
 <body>
   <header>
@@ -16,10 +17,17 @@
           <li><a href="#BMS">Bee Movie Script &nbsp;</a></li>
           <li><a href="#S">&nbsp; Shrek Movie Script &nbsp;</a></li>
           <li><a href="#CVS">&nbsp; Corrupted Vor's Speech </a></li>
-         
-      </ul>
+         </ul>
+          <ul>
+          <button onClick = "NightMode()" id= togBut>Night/Day Mode</button>
+        </ul>    
     </nav>
   </header>
+
+<main>
+  <h6>Main Title</h6>
+  <p>Main Content</p>
+</main>
 
 <style>
   @media print { @page { size: auto; margin: 0; } body { margin: 1.6cm; } }
