--- a/LabWeek7.html
+++ b/LabWeek7.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="NavLinkWeek6.css">
   <link rel="stylesheet" href="NightMode.js">
 </head>
-
+<div id="mydiv">
 <body>
   <header>
     <nav>
@@ -22,6 +22,7 @@
           <br>
           <button onClick = "NightMode()" id= togBut>Night/Day Mode</button>
           <br>
+      </ul>
     </nav>
   </header>
 
@@ -155,5 +156,5 @@
         They will learn its simple truth. The Tenno are lost, and they will resist. But I, Vor, will cleanse this place of their impurity.</p>
   </div>     
 </body>
-
+    </div>
 </html>
