--- a/LabWeek7.html
+++ b/LabWeek7.html
@@ -13,7 +13,7 @@
   <header>
     <nav>
       <ul>
-        <p>Update Testing</p>
+        <!--<p>Update Testing</p>-->
           <p>Lab 7: Navigation Menu (small size)</p>
           <li><input type="button" value="Dark Theme" onclick="apply_theme('dark')"></li>
           <li><a href="#BMS">Bee Movie Script &nbsp;</a></li>
