--- a/LabWeek7.html
+++ b/LabWeek7.html
@@ -16,9 +16,9 @@
         <!--<p>Update Testing</p>-->
           <p>Lab 7: Navigation Menu (small size)</p>
           <li><input type="button" value="Dark Theme" onclick="apply_theme('dark')"></li>
-          <li><a href="#BMS">Bee Movie Script &nbsp;</a></li>
-          <li><a href="#S">&nbsp; Shrek Movie Script &nbsp;</a></li>
-          <li><a href="#CVS">&nbsp; Corrupted Vor's Speech </a></li>
+          <li><a href="#BMS">Bee Movie Script</a></li>
+          <li><a href="#S">Shrek Movie Script</a></li>
+          <li><a href="#CVS">Corrupted Vor's Speech</a></li>
           <li><input type="button" value="Light Theme" onclick="apply_theme('light')"></li>
           </ul>
           <br>
