--- a/LabWeek9.html
+++ b/LabWeek9.html
@@ -31,6 +31,12 @@
 </style>
 <main>
   <h1>Lab 7: Website Title</h1>
+<div class="dropdown">
+<button onclick="myFunction()" class="dropbtn">Dropdown</button>
+  <div id="myDropdown" class="dropdown-content">
+    <a href="#home">Home</a>
+    <a href="#about">About</a>
+  </div>
   <hr>
 
   <div>
