--- a/LabWeek9.html
+++ b/LabWeek9.html
@@ -5,7 +5,7 @@
   <title>Lab 9</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="NavLinkWeek6.css">
+  <link rel="stylesheet" href="NavLinkWeek9.css">
   <script src="NightMode.js"></script>
 </head>
 
@@ -161,7 +161,7 @@
         Now I am changed, reborn through the energy of the Janus Key. Forever bound to the Void. Let it be known, if the Tenno want true salvation, they will lay down their arms, and wait for the baptism of my Janus key. It is time. I will teach these trespassers the redemptive power of my Janus key. 
         They will learn its simple truth. The Tenno are lost, and they will resist. But I, Vor, will cleanse this place of their impurity.</p>
   </div>
-    <script src="NightMode.js"></script>
+    <script src="NightModeDropDown.js"></script>
     </main>     
 </body>
 </html>
