--- a/LabWeek9.html
+++ b/LabWeek9.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="NavLinkWeek9.css">
-  <script src="NightMode.js"></script>
+  <script src="NightModeDropDown.js"></script>
 </head>
 
 <body>
