--- a/LabWeek9.html
+++ b/LabWeek9.html
@@ -14,11 +14,9 @@
     <nav>
       <ul>
           <p>Lab 9: Navigation Menu (small size)</p>
-          <li><input type="button" value="Dark Theme" onclick="apply_theme('dark')"></li>
           <li><a href="#BMS">Bee Movie Script</a></li>
           <li><a href="#S">Shrek Movie Script</a></li>
           <li><a href="#CVS">Corrupted Vor's Speech</a></li>
-          <li><input type="button" value="Light Theme" onclick="apply_theme('light')"></li>
           </ul>
           <br>
       </ul>
@@ -34,8 +32,9 @@
 <div class="dropdown">
 <button onclick="myFunction()" class="dropbtn">Dropdown</button>
   <div id="myDropdown" class="dropdown-content">
-    <a href="#home">Home</a>
-    <a href="#about">About</a>
+    <a <input type="button" value="Dark Theme" onclick="apply_theme('dark')"></a>
+    <a <input type="button" value="Light Theme" onclick="apply_theme('light')"></a>
+
   </div>
   <hr>
 
